@@ -4,6 +4,7 @@
    from LMS.
 2. In MAI track view only show 'Band/orchestra' if different to 'Album
    artist', and only show 'Albuim artist' if different from track artist.
+3. Add 'browseWork' to 'document.lmsMaterialSkin'
 
 4.6.1
 -----
